--- a/src/components/atoms/Input/style.css
+++ b/src/components/atoms/Input/style.css
@@ -13,7 +13,7 @@
     opacity: 0.47;
     border-radius: 18.3px;
     font-size: 30px;
-    padding-left: 30px;
+    padding: 0 0 0 30px;
 }
 
 .input--large{
