add intro page,intro template, jumbotron to intro as organism

--- a/src/components/atoms/Subtitle/style.css
+++ b/src/components/atoms/Subtitle/style.css
@@ -2,14 +2,16 @@
 
 .subtitle{
     text-transform: uppercase;
-    font-weight: 800;
+    font-weight: 700;
     font-family: 'Open Sans', sans-serif;
+    margin: 0;
 }
 
 /* Size */
 .subtitle--intro{
     font-size: 25px;
     font-style: italic;
+    padding: 7.5px 0 62.5px 2px;
 }
 
 .subtitle--letsgo{
