--- a/src/components/atoms/Title/style.css
+++ b/src/components/atoms/Title/style.css
@@ -6,11 +6,9 @@
   font-family: 'Open Sans', sans-serif;
   font-size: 92px;
   font-weight: 800;
-  font-style: normal;
-  letter-spacing: normal;
-  line-height: normal;
   text-align: left;
   text-transform: uppercase;
   margin: 0;
-
+  line-height: 1.2;
+  padding-left: 2px;
 }
