add 2 shapes to intro, and background with gradient

--- a/src/components/atoms/BodyText/style.css
+++ b/src/components/atoms/BodyText/style.css
@@ -70,7 +70,7 @@
 .theme--intro{
     font-family: "Open Sans";
     font-style: italic;
-    color: var(--white);
+    color: var(--dark-1);
 }
 
 .theme--letsgo{
