--- a/src/components/templates/Intro/style.css
+++ b/src/components/templates/Intro/style.css
@@ -4,3 +4,9 @@
     background-blend-mode: screen;
     position: relative;
 }
+
+.inner{
+    max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+}
