--- a/src/components/templates/Intro/style.css
+++ b/src/components/templates/Intro/style.css
@@ -1,4 +1,4 @@
-.wrapper{
+.wrapper--intro{
     background: url("../../../images/intro_background.jpg") no-repeat, linear-gradient(to top, rgba(52, 52, 52, 0.7) 0%, rgba(67, 64, 55, 0.47) 100%);
     background-size: cover;
     background-blend-mode: screen;
