--- a/src/components/molecules/Hamburger/style.css
+++ b/src/components/molecules/Hamburger/style.css
@@ -1,30 +1,48 @@
 @import '../../../_settings_/_variables.css';
 
-.hamburger{
+.hamburger {
     z-index: 1;
+    display: none;
 }
 
-.hamburger:hover{
+.hamburger:hover {
     cursor: pointer;
 }
 
-.toggle{
-    width: 30px;
-    height: 5px;
+.toggle {
+    width: 40px;
+    height: 8px;
     background: var(--grey-2);
     margin: 4px auto;
     transition: all 0.3s;
     backface-visibility: hidden;
 }
 
-input[type=checkbox]:checked + div{
-    transform: rotate(45deg) translate(5px, 5px);
+.input--hamburger:checked + div {
+    transform: rotate(45deg) translate(8px, 8px);
 }
 
-input[type=checkbox]:checked ~ div:nth-of-type(2){
+.input--hamburger:checked ~ div:nth-of-type(2) {
     opacity: 0;
 }
 
-input[type=checkbox]:checked ~ div:nth-of-type(3){
+.input--hamburger:checked ~ div:nth-of-type(3) {
     transform: rotate(-45deg) translate(8px, -8px);
 }
+
+@media only screen and (max-width: 1200px) {
+    .hamburger {
+         display: block;
+    }
+ }
+
+ @media only screen and (max-width: 320px) {
+   .toggle {
+        width: 30px;
+        height: 5px;
+   }
+
+   .input--hamburger:checked + div {
+    transform: rotate(45deg) translate(5px, 5px);
+    }
+ }
