--- a/src/components/atoms/BodyText/style.css
+++ b/src/components/atoms/BodyText/style.css
@@ -1,12 +1,12 @@
 @import '../../../_settings_/_variables.css';
 
-.bodyText{
+.bodyText {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
 
 /* size */
-.bodyText_size--intro{
+.bodyText_size--intro {
     font-size: 21px;
     letter-spacing: 0.96px;
     text-align: left;
@@ -14,7 +14,7 @@
     padding: 25.5px 0 216.5px 0;
 }
 
-.bodyText_size--letsgo{
+.bodyText_size--letsgo {
     max-width: 694px;
     font-size: 27px;
     text-align: center;
@@ -23,7 +23,7 @@
     padding: 24.5px 0 72.5px 0;
 }
 
-.bodyText_size--card{
+.bodyText_size--card {
     max-width: 299px;
     font-size: 23px;
     text-align: left;
@@ -32,40 +32,40 @@
     padding-bottom: 72px;
 }
 
-.bodyText_size--offer{
+.bodyText_size--offer {
     max-width: 550px;
     font-size: 33px;
     text-align: left;
     padding-bottom: 43.5px;
 }
 
-.bodyText_size--description{
+.bodyText_size--description {
     max-width: 895px;
     text-align: center;
     font-size: 29px;
 }
 
-.bodyText_size--loremipsum{
+.bodyText_size--loremipsum {
     max-width: 332px;
     font-size: 19px;
     line-height: 24.93px;
     text-align: left;
 }
 
-.bodyText_size--quotation{
+.bodyText_size--quotation {
     font-size: 25px;
     max-width: 792px;
     text-align: center;
     font-weight: 600;
 }
 
-.bodyText_size--subscribe{
+.bodyText_size--subscribe {
     max-width: 890px;
     font-size: 30px;
     text-align: center;
 }
 
-.bodyText_size--footer{
+.bodyText_size--footer {
     max-width: 457px;
     font-size: 24px;
     text-align: left;
@@ -87,27 +87,45 @@
     color: var(--white);
 }
 
-.bodyText_theme--offer{
+.bodyText_theme--offer {
     color: var(--white);
 }
 
-.bodyText_theme--description{
+.bodyText_theme--description {
     color: var(--grey-1);
 }
 
-.bodyText_theme--loremipsum{
+.bodyText_theme--loremipsum {
     color: var(--dark-3);
 }
 
-.bodyText_theme--quotation{
+.bodyText_theme--quotation {
     color: var(--dark-2)
 }
 
-.bodyText_theme--subscribe{
+.bodyText_theme--subscribe {
     color: var(--dark-1);
 }
 
-.bodyText_theme--footer{
+.bodyText_theme--footer {
     font-family: 'Montserrat';
     color: var(--white);
 }
+
+@media only screen and (min-width:321px) and (max-width: 768px) {
+    .bodyText_size--intro{
+        font-size: 14.7px;
+        max-width: 300px;
+        padding: 12.75px 0 113.25px 0;
+    }
+  }
+  
+
+@media only screen and (max-width: 320px) {
+    .bodyText_size--intro{
+        font-size: 12.6px;
+        max-width: 300px;
+        padding: 15.3px 0 135.9px 0;
+    }
+}
+
