--- a/src/components/atoms/Button/style.css
+++ b/src/components/atoms/Button/style.css
@@ -6,8 +6,14 @@
     font-style: normal;
     letter-spacing: normal;
     border: none;
-    cursor: pointer;
     display: block;
+    transition: all 1s ease;
+  }
+
+  .button:hover {
+    cursor: pointer;
+    transform: scale(1.02);
+    box-shadow: -2px 2px 9px -2px var(--grey-2);
   }
   
   /* Size */
@@ -68,4 +74,20 @@
     margin-right: auto;
   }
 
-  
+  @media only screen and (min-width:321px) and (max-width: 768px) {
+    .button--small {
+      width: 218px;
+      height: 47px;
+      border-radius: 21.8px;
+      font-size: 25px;
+    }
+}
+
+  @media only screen and (max-width: 320px) {
+    .button--small {
+      width: 152.6px;
+      height: 32.9px;
+      border-radius: 15.26px;
+      font-size: 15px;
+    }
+  }
