--- a/src/components/molecules/Card/style.css
+++ b/src/components/molecules/Card/style.css
@@ -3,4 +3,18 @@
 .card {
     background-color: var(--grey-2);
     width: 339px;
+    margin: 0 auto 20px auto;
+}
+
+@media only screen and (min-width: 321px) and (max-width: 768px) {
+    .card {
+        width: 271.2px;
+    }
+  }
+  
+
+@media only screen and (max-width: 320px) {
+    .card {
+        width: 237.2px;
+    }
 }
