--- a/src/components/organisms/Cards/style.css
+++ b/src/components/organisms/Cards/style.css
@@ -2,5 +2,18 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 0 147px 52px 121px;
+    padding: 0 135px 32px 135px;
+}
+
+@media only screen and (min-width: 321px) and (max-width: 768px) {
+    .cards {
+        padding: 0 20px 19.2px 20px;
+    }
+  }
+  
+
+@media only screen and (max-width: 320px) {
+    .cards {
+        padding: 0 10px 16px 10px;
+    }
 }
