--- a/src/components/atoms/Image/style.css
+++ b/src/components/atoms/Image/style.css
@@ -27,7 +27,7 @@
 }
 
 .imgBox--offer {
-    width: 717px;
+    width: 720px;
     height: 780px;
     z-index: 1;
 }
@@ -75,6 +75,11 @@
     .imgBox--snowSecond {
         display: none;
     }
+
+    .imgBox--offer {
+        width: 573,6px;
+        height: auto;
+    }
 }
 
 @media only screen and (max-width: 320px) {
@@ -102,5 +107,10 @@
     
     .imgBox--snowSecond {
         display: none;
+    }
+
+    .imgBox--offer {
+        width: 501,9px;
+        height: auto;
     }
 }
