--- a/src/components/molecules/DiscountInfo/style.css
+++ b/src/components/molecules/DiscountInfo/style.css
@@ -2,3 +2,16 @@
     padding: 30px 0 148px 0;
     width: 720px;
 }
+
+@media only screen and (min-width:321px) and (max-width: 768px) {
+    .discountInfo {
+        padding: 18px 0 88.8px 0;
+    }
+    
+}
+
+@media only screen and (max-width: 320px) {
+    .discountInfo {
+        padding: 15px 0 74px 0;
+    }
+}
