--- a/src/components/atoms/BodyText/style.css
+++ b/src/components/atoms/BodyText/style.css
@@ -44,6 +44,7 @@
     font-size: 29px;
     margin: 0 auto;
     padding-bottom: 215px;
+    white-space: pre-wrap;
 }
 
 .bodyText_size--loremipsum {
@@ -117,7 +118,7 @@
     .bodyText_size--intro{
         font-size: 14.7px;
         max-width: 300px;
-        padding: 12.75px 0 113.25px 0;
+        padding: 15.3px 0 129.9px 0;
     }
 
     .bodyText_size--letsgo {
@@ -138,6 +139,12 @@
         font-size: 23.1px;
         padding-bottom: 26.1px;
     }
+
+    .bodyText_size--description {
+        max-width: 895px;
+        font-size: 20.3px;
+        padding: 0 10px 87.6px 10px;
+    }
   }
   
 
@@ -145,7 +152,7 @@
     .bodyText_size--intro{
         font-size: 12.6px;
         max-width: 300px;
-        padding: 15.3px 0 135.9px 0;
+        padding: 12.75px 0 39.5px 0;
     }
 
     .bodyText_size--letsgo {
@@ -165,6 +172,12 @@
         max-width: 300px;
         font-size: 19.8px;
         padding-bottom: 26.1px;
+    }
+
+    .bodyText_size--description {
+        max-width: 300px;
+        font-size: 17.4px;
+        padding: 0 10px 73px 10px;
     }
 }
 
