--- a/src/components/atoms/Subtitle/style.css
+++ b/src/components/atoms/Subtitle/style.css
@@ -115,9 +115,16 @@
     }
 
     .subtitle_size--offer {
-        font-size: 40.6;
+        font-size: 40.6px;
         padding-top: 97.5px;
         padding-bottom: 20.4px;
+    }
+
+    .subtitle_size--description {
+        font-size: 40.6px;
+        text-transform: none;
+        text-align: center;
+        padding: 96.6px 10px 22.2px 10px;
     }
 }
 
@@ -142,5 +149,12 @@
         max-width: 300px;
         padding-top: 81.25px;
         padding-bottom: 17px;
+    }
+
+    .subtitle_size--description {
+        font-size: 34.8px;
+        text-transform: none;
+        text-align: center;
+        padding: 80.5px 10px 18.5px 10px;
     }
 }
