--- a/src/components/templates/Explore/style.css
+++ b/src/components/templates/Explore/style.css
@@ -3,6 +3,7 @@
     background-size: cover;
     background-blend-mode: screen;
     position: relative;
+    background-position: right;
 }
 
 .inner--explore{
@@ -11,3 +12,15 @@
     margin-right: auto;
     padding: 472px 103px 426px 0;
 }
+
+@media only screen and (min-width:321px) and (max-width: 768px) {
+    .inner--explore{
+        padding: 283.2px 10px 255.6px 10px;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .inner--explore{
+        padding: 236px 10px 213px 10px;
+    }
+} 
